--- a/Resources/Prototypes/InventoryTemplates/pet_inventory_template.yml
+++ b/Resources/Prototypes/InventoryTemplates/pet_inventory_template.yml
@@ -64,7 +64,7 @@
     slotFlags: EYES
     uiWindowPos: 1,2
     strippingWindowPos: 1,2
-    displayName: Head
+    displayName: Eyes
     whitelist:
       tags:
       - PetWearable
