--- a/Resources/Prototypes/_Shitmed/Entities/Surgery/surgery_steps.yml
+++ b/Resources/Prototypes/_Shitmed/Entities/Surgery/surgery_steps.yml
@@ -658,6 +658,11 @@
     isConsumable: true
 
 - type: entity
+  parent: SurgeryStepInsertOrgan
+  id: SurgeryStepInsertPump
+  name: Add pump
+
+- type: entity
   parent: SurgeryStepBase
   id: SurgeryStepSealOrganWound
   name: Seal wounds
