--- a/Resources/Prototypes/_Goobstation/Entities/Structures/Wallmounts/walldispenser.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Structures/Wallmounts/walldispenser.yml
@@ -6,7 +6,8 @@
   components:
   - type: Sprite
     layers:
-    - state: pepperdispenser # This was already in the files lol.
+    - state: pepperdispenser
+      sprite: _Trauma/Structures/Wallmounts/walldispenser.rsi
     - state: fill-1
       map: ["enum.SolutionContainerLayers.Fill"]
       visible: false
