Hermit buffs (makes the hermit more sleeper sided then it was) (#5106)
Hermit buffs

buffs the Hermit gamemode so that it will target mid rounds

Co-authored-by: Squishy77 <165165480+Squishy77@users.noreply.github.com>

--- a/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/secretplus.yml
@@ -193,8 +193,8 @@
   categories: [ HideSpawnMenu ]
   components:
   - type: SecretPlus
-    minStartingChaos: 11
-    maxStartingChaos: 22
+    minStartingChaos: 13 #increased by 2
+    maxStartingChaos: 25 #increased by 2
     livingChaosChange: -0.018
     deadChaosChange: 0.020
     chaosChangeVariationMin: 0.65
