--- a/Resources/Prototypes/_Goobstation/GameRules/midround.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/midround.yml
@@ -126,7 +126,8 @@
     definitions:
     - prefRoles: [ SleeperHeretic ]
     - fallbackRoles: [ Heretic ]
-      max: 1
+      min: 1
+      max: 2
       playerRatio: 15
       blacklist:
         components:
