Job distribution error (#4791)
* 2

* ehh

* Update job-supervisors.ftl

* Fix survival boxes not spawning

* Fix the thing I broke

* Fix grammar, add Command Maid PDA description

- The description is very funny--I assure you.

* Remove old ref to 'JobFloraInspector'

- Believe this was from earlier in the old PR

* some yaml fixes

* Job Distribution Error event

* Moved to goob

* Remove old ref to 'JobFloraInspector'

- Believe this was from earlier in the old PR

* Fuckyou

* Goobcomments

* removed flora inspector

* Apply suggestions from code review

Co-authored-by: Richard Blonski <48651647+RichardBlonski@users.noreply.github.com>

* chameleonOutfits

* Goobstation namespace

---------

Co-authored-by: lzk <124214523+lzk228@users.noreply.github.com>
Co-authored-by: empty0set <16693552+empty0set@users.noreply.github.com>
Co-authored-by: Richard Blonski <48651647+RichardBlonski@users.noreply.github.com>
Co-authored-by: NotActuallyMarty <27968892+NotActuallyMarty@users.noreply.github.com>

--- a/Resources/Prototypes/Entities/Clothing/Ears/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Ears/specific.yml
@@ -14,3 +14,4 @@
     - type: ChameleonClothing
       slot: [ears]
       default: ClothingHeadsetGrey
+    - type: HideContrabandContent #Goobstation-Contraband detector
