--- a/Resources/Prototypes/_Goobstation/StatusIcon/job.yml
+++ b/Resources/Prototypes/_Goobstation/StatusIcon/job.yml
@@ -20,3 +20,27 @@
     sprite: /Textures/_Goobstation/Interface/Misc/job_icons.rsi
     state: trainer
   jobName: job-name-nct
+
+- type: jobIcon
+  parent: JobIcon
+  id: JobIconCommandMaid
+  icon:
+    sprite: _Goobstation/Interface/Misc/job_icons.rsi
+    state: CommandMaid
+  allowSelection: false
+
+- type: jobIcon
+  parent: JobIcon
+  id: JobIconPartyMaker
+  icon:
+    sprite: _Goobstation/Interface/Misc/job_icons.rsi
+    state: PartyMaker
+  allowSelection: false
+
+- type: jobIcon
+  parent: JobIcon
+  id: JobIconSecurityClown
+  icon:
+    sprite: _Goobstation/Interface/Misc/job_icons.rsi
+    state: SecurityClown
+  allowSelection: false
