Hermit - Merged Midround Heretic/Devil/Changling roles into the already existing ones (#5100)
Merged Midround Heretic/Devil/Changling roles into the already existing ones

--- a/Resources/Prototypes/_Goobstation/GameRules/midround.yml
+++ b/Resources/Prototypes/_Goobstation/GameRules/midround.yml
@@ -81,8 +81,7 @@
     selectionTime: PostPlayerSpawn
     agentName: changeling-roundend-name
     definitions:
-    - prefRoles: [ SleeperChangeling ]
-    - fallbackRoles: [ Changeling ]
+    - prefRoles: [ Changeling ]
       min: 1
       max: 2
       playerRatio: 10
@@ -125,8 +124,7 @@
     selectionTime: PostPlayerSpawn
     agentName: heretic-roundend-name
     definitions:
-    - prefRoles: [ SleeperHeretic ]
-    - fallbackRoles: [ Heretic ]
+    - prefRoles: [ Heretic ]
       min: 1
       max: 2
       playerRatio: 15
@@ -280,8 +278,7 @@
     selectionTime: PostPlayerSpawn
     agentName: devil-roundend-name
     definitions:
-    - prefRoles: [ SleeperDevil ]
-    - fallbackRoles: [ Devil ]
+    - prefRoles: [ Devil ]
       max: 1
       playerRatio: 15
       blacklist:
