--- a/Resources/Prototypes/Entities/Structures/Windows/window.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/window.yml
@@ -152,6 +152,7 @@
   parent: Window
   id: TintedWindow
   name: tinted window
+  description: Smart tinted window with state switching option.
   components:
   - type: Sprite
     drawdepth: WallTops
@@ -168,6 +169,20 @@
     price: 70
   - type: CosmicCorruptible # DeltaV - Cosmic Cult
     convertTo: WindowCosmicCult
+  - type: ToggleableOccluder # Goob
+  - type: DeviceLinkSink # Goob
+    ports:
+    - On
+    - Off
+    - Toggle
+
+- type: entity # Goob
+  parent: TintedWindow
+  id: TintedWindowTransparent
+  suffix: Transparent
+  components:
+  - type: Occluder
+    enabled: false
 
 - type: entity
   id: WindowRCDResistant
