--- a/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/MaterialDoors/material_doors.yml
@@ -61,6 +61,7 @@
         acts: ["Destruction"]
   - type: Occluder
   - type: BlockWeather
+  - type: SoundBlocker # Trauma
 
 - type: entity
   abstract: true
