--- a/Resources/Prototypes/Entities/Structures/Doors/Shutter/shutters.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Shutter/shutters.yml
@@ -152,6 +152,8 @@
     interactSuccessSound:
       collection: FenceRattle
   - type: BlockWeather
+  - type: SoundBlocker # Trauma
+    soundBlockPercent: 0.5
 
 - type: entity
   id: ShuttersNormal
