--- a/Resources/Prototypes/Entities/Structures/Walls/walls.yml
+++ b/Resources/Prototypes/Entities/Structures/Walls/walls.yml
@@ -233,6 +233,7 @@
   - type: ExaminableDamage
     messages: WindowMessages
   # </Goobstation>
+  - type: SoundBlocker # Trauma
 
 - type: entity
   abstract: true
