--- a/Resources/Prototypes/Entities/Structures/Windows/window.yml
+++ b/Resources/Prototypes/Entities/Structures/Windows/window.yml
@@ -145,6 +145,8 @@
   - type: StaticPrice
     price: 100
   - type: BlockWeather
+  - type: SoundBlocker # Trauma
+    soundBlockPercent: 0.5
 
 - type: entity
   parent: Window
