--- a/Resources/Prototypes/Entities/Structures/Doors/SecretDoor/secret_door.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/SecretDoor/secret_door.yml
@@ -95,6 +95,7 @@
   - type: BlockWeather
   - type: ExaminableDamage
     messages: WindowMessages
+  - type: SoundBlocker # Trauma
 
 - type: entity
   id: BaseSecretDoorAssembly
