--- a/Resources/clientCommandPerms.yml
+++ b/Resources/clientCommandPerms.yml
@@ -88,6 +88,7 @@
     - fullstatereset
     - dumpentities
     - showaccessreaders
+    - showaudiomuffle # Trauma
 
 - Flags: MAPPING
   Commands:
