Added pressure restriction to miner's salve OD (#5188)
* Added pressure restriction to OD

* Update medicine.yml

---------

Co-authored-by: Roudenn <romabond091@gmail.com>

--- a/Resources/Prototypes/_Lavaland/Reagents/medicine.yml
+++ b/Resources/Prototypes/_Lavaland/Reagents/medicine.yml
@@ -45,7 +45,7 @@
         amount: 1.5
         conditions:
         - !type:PressureCondition
-          min: 0
+          min: 1
           max: 50
           worksOnLavaland: true
       - !type:HealthChange
@@ -57,7 +57,7 @@
             Bloodloss: -1.25
         conditions:
         - !type:PressureCondition
-          min: 0
+          min: 1
           max: 50
           worksOnLavaland: true
       - !type:HealthChange
@@ -65,6 +65,10 @@
         - !type:ReagentCondition
           reagent: MinersSalve
           min: 21
+        - !type:PressureThreshold
+          min: 1
+          max: 50
+          worksOnLavaland: true
         damage:
           types:
             Poison: 5
@@ -96,7 +100,7 @@
         conditions:
         - !type:PressureCondition
           inverted: true # only do the damage outside of lavaland
-          min: 0
+          min: 1
           max: 50
           worksOnLavaland: true
         damage:
