--- a/Resources/Prototypes/_Lavaland/Reagents/medicine.yml
+++ b/Resources/Prototypes/_Lavaland/Reagents/medicine.yml
@@ -65,7 +65,7 @@
         - !type:ReagentCondition
           reagent: MinersSalve
           min: 21
-        - !type:PressureThreshold
+        - !type:PressureCondition
           min: 1
           max: 50
           worksOnLavaland: true
