--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Misc/subdermal_implants.yml
@@ -306,24 +306,13 @@
     - type: XenoCompatible
 
 - type: entity
-  parent: BaseSubdermalImplant
+  parent: BluespaceLifelineImplant
   id: RedspaceLifelineImplant
   name: redspace lifeline implant
   description: Teleports the hosts body to Syndicate High Command on activation. They will not be able to return.
   categories: [ HideSpawnMenu ]
   components:
-    - type: SubdermalImplant
-      permanent: true
-      implantAction: ActionActivateRedspaceLifeline
-    - type: MansusGraspBlockTrigger
-    - type: TriggerOnMobstateChange
-      mobState:
-        - Dead
-    - type: TriggerImplantAction
-    - type: DeleteParentOnTrigger
-    - type: SpawnOnTrigger
-      proto: RedspaceLifelineSpawnCore
-    - type: Tag
-      tags:
-        - SubdermalImplant
-        - HideContextMenu
+  - type: SubdermalImplant
+    implantAction: ActionActivateRedspaceLifeline
+  - type: SpawnOnTrigger
+    proto: RedspaceLifelineSpawnCore
