--- a/Resources/Prototypes/_White/Entities/Mobs/Xenomorphs/base.yml
+++ b/Resources/Prototypes/_White/Entities/Mobs/Xenomorphs/base.yml
@@ -27,7 +27,8 @@
     canExamine: false
   - type: ThermalVision
     toggleAction: ToggleThermalVisionXenomorph
-    color: "#7d0cc9"
+    color: white
+    drawOverlay: false
     lightRadius: 10
     strength: 0
     noise: 0
