Chem injector nerfs (#4991)
* Change syringe gun behavior.

* No more borg hypo.

* comments

Co-authored-by: Richard Blonski <48651647+RichardBlonski@users.noreply.github.com>

* More comment.

* Revert "comments"

This reverts commit 2f712c70d3b5ddce574aac2be649c9d40f75767d.

* Thanks.

---------

Co-authored-by: Richard Blonski <48651647+RichardBlonski@users.noreply.github.com>

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -1830,6 +1830,10 @@
         effectProto: StatusEffectDrowsiness
         time: 4
         type: Add
+        conditions: # Goob
+        - !type:ReagentCondition
+          reagent: Haloperidol
+          min: 5
       - !type:GenericStatusEffect
         key: Jitter
         time: 4.0
