Mass contests followup (#5329)
* Do

* Do 2.

* Oops.

--- a/Resources/Prototypes/Nyanotrasen/Entities/Mobs/Species/Oni.yml
+++ b/Resources/Prototypes/Nyanotrasen/Entities/Mobs/Species/Oni.yml
@@ -37,15 +37,27 @@
     # scale: 1.2, 1.2 # Goobstation: port EE height/width sliders
   - type: ScaleData # Goobstation
     # scale: 1.2, 1.2 # Goobstation: port EE height/width sliders
-  - type: Oni
-    modifiers:
-      coefficients:
-        Blunt: 1.35
-        Slash: 1.2
-        Piercing: 1.2
-        Structural: 1.35 # Goobstation - Changed from Asphyxiation
   - type: Damageable
     damageModifierSet: Oni
+  - type: PlayerToolModifier
+    pryTimeMultiplier: 0.6
+  - type: PlayerAccuracyModifier
+    blacklist:
+      components:
+      - DamageBoostOnMarker
+      - LeechOnMarker
+      - ArcaneBarrage
+      tags:
+      - WizardWand
+      - WizardStaff
+  - type: BonusMeleeDamage
+    damageModifierSet:
+      coefficients:
+        Blunt: 1.1
+        Slash: 1.1
+        Piercing: 1.1
+        Asphyxiation: 1.1
+        Structural: 1.1
   - type: Body
     prototype: Oni
   - type: Fixtures
@@ -60,8 +72,6 @@
         - MobMask
         layer:
         - MobLayer
-  - type: Stamina
-    critThreshold: 115
   - type: TypingIndicator
     proto: oni
   - type: Tag
