--- a/Resources/Prototypes/_Goobstation/Heretic/Entities/Clothing/Head/hoods.yml
+++ b/Resources/Prototypes/_Goobstation/Heretic/Entities/Clothing/Head/hoods.yml
@@ -50,6 +50,7 @@
       NerveDamage: 0.0
   - type: FireProtection
     reduction: 0.1
+  - type: FaceHuggerBlocker
 
 - type: entity
   parent: ClothingHeadHatHoodHeretic
@@ -133,3 +134,4 @@
       BoneDamage: 0.3
       VeinsDamage: 0.0
       NerveDamage: 0.0
+  - type: FaceHuggerBlocker
