kill chud animal loadouts (#182)
* remove Animals loadouts

* kill squackroach

* start mothroach replacement

* kill goldfish

* kill textures

* goida overflow

---------

Co-authored-by: deltanedas <@deltanedas:kde.org>

--- a/Resources/Prototypes/Catalog/Fills/Crates/service.yml
+++ b/Resources/Prototypes/Catalog/Fills/Crates/service.yml
@@ -342,7 +342,7 @@
           # Creatures
         - id: MobCockroach
           prob: 0.05
-        - id: MobMothroach
+        - id: MobMothmaggot # Trauma - was MobMothroach
           prob: 0.03
         - id: MobMouse
           prob: 0.05
