--- a/Resources/Prototypes/Catalog/Cargo/cargo_livestock.yml
+++ b/Resources/Prototypes/Catalog/Cargo/cargo_livestock.yml
@@ -248,7 +248,7 @@
   icon:
     sprite: Mobs/Animals/mothroach/mothroach.rsi
     state: mothroach
-  product: CrateNPCMothroach
+  product: CrateNPCMothmaggot # Trauma
   cost: 5000
   category: cargoproduct-category-name-livestock
   group: market
