--- a/Resources/Prototypes/_Goobstation/fonts.yml
+++ b/Resources/Prototypes/_Goobstation/fonts.yml
@@ -44,8 +44,7 @@
   id: MonospaceBold
   path: /Fonts/_Goobstation/NotoSansMono/NotoSansMono-Bold.ttf
 
-# Valyrian Standard (Harpies/Squackroaches)
+# Valyrian Standard (Harpies)
 - type: font
   id: Delius
   path: /Fonts/_Goobstation/Delius/Delius-Regular.ttf
-
