--- a/Resources/Audio/Machines/attributions.yml
+++ b/Resources/Audio/Machines/attributions.yml
@@ -257,3 +257,13 @@
   license: "CC-BY-3.0"
   copyright: "Created by Tomlija, converted to OGG and modified by themias."
   source: "https://freesound.org/people/Tomlija/sounds/99565/"
+
+- files: [ "deepfryer_basket_remove_item.ogg" ]
+  license: "CC0-1.0"
+  copyright: "637625__kyles__kitchen-restaurant-fries-deep-fryer-basket-pickup-put-down-clack-metal.flac by kyles. This is a cleaned-up clip converted to OGG."
+  source: "https://freesound.org/people/kyles/sounds/637625/"
+
+- files: [ "deepfryer_basket_add_item.ogg" ]
+  license: "CC0-1.0"
+  copyright: "440587__ursenfuns__deep-fryer.wav by ursenfuns. This is a cleaned and shortened clip converted to OGG."
+  source: "https://freesound.org/people/ursenfuns/sounds/440587/"
